--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
+    position: relative;
     height: 95vh;
     display: flex;
     justify-content: center;   
     align-items: center;
-    background: linear-gradient(270deg, #00f2fe, #4facfe, #00f2fe, #4facfe);
+    background: linear-gradient(270deg, #00f2ff, #4facfe, #00f2fe, #4facfe);
     background-size: 600% 600%;
     animation: gradient-background 20s ease infinite;
 }
@@ -15,12 +16,27 @@ body {
 }
 
 #calc{
+    position: relative;
     display: flex;
     height: 552px;
     width: 315px;
     border-style: solid;
     border-color: black;
     border-radius: 20px;
+    background-image: url(background.png);
+    background-size: cover;
+    background-position-x: -18px;
+    background-repeat: no-repeat;
+    overflow: hidden;
+    box-shadow: 0 0 15px black;
+}
+
+#calc::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.4);
+    pointer-events: none;
 }
 
 #top-content {
@@ -35,6 +51,7 @@ body {
 }
 
 .panel {
+    position: relative;
     height: 80%;
     width: 87%;
     justify-self: end;
@@ -43,6 +60,35 @@ body {
     border-radius: 10px;
     border-style: solid;
     border-color: black;
+    background: #523e2e;
+    box-shadow: inset 5px 5px 10px #222, inset -5px -5px 10px #444;
+    overflow: hidden;
+}
+
+.panel::before {
+    content: "";
+    position: absolute;
+    height: 110%;
+    width: 45.74px;
+    border: solid;
+    border-width: 1px;
+    border-color: black;
+    left: 140px;
+    bottom: -5px;
+    opacity: 0.4;
+}
+
+.panel::after {
+    content: "";
+    position: absolute;
+    height: 110%;
+    width: 45.74px;
+    border: solid;
+    border-width: 1px;
+    border-color: black;
+    left: 45px;
+    bottom: -5px;
+    opacity: 0.4;
 }
 
 .model-text {
@@ -91,4 +137,6 @@ body {
     border-color: black;
     border-radius: 5px;
     translate: 0 -9px;
+    background: #71776b;
+    box-shadow: inset 5px 5px 10px #222, inset -5px -5px 10px #444;
 }
