--- a/style.css
+++ b/style.css
@@ -56,10 +56,10 @@ body {
     justify-self: end;
     align-self: center;
     margin-right: 14px;
+    background: #523e2e;
     border-radius: 10px;
     border-style: solid;
     border-color: rgb(0, 0, 0, 0.2);
-    background: #523e2e;
     box-shadow: inset 5px 5px 10px #222, inset -5px -5px 10px #444;
     box-shadow: 1px 1px 4px #000000, -1px -1px 4px #000000;
     overflow: hidden;
@@ -105,7 +105,7 @@ body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: bold;
     letter-spacing: 1px;
-    transform: scaleX(1.2);
+    transform: scaleX(1.3);
     translate: -3px -15px;
     margin-left: 8px;
     color: white;
@@ -130,13 +130,19 @@ body {
 }
 
 .screen {
-    width: 290px;
+    width: 280px;
     height: 100%;
     justify-self: center;
-    border-style: solid;
-    border-color: black;
+    translate: 1px -5px;
+    background: rgb(82, 87, 78);
     border-radius: 5px;
-    translate: 0 -9px;
-    background: #71776b;
+    border-width: 7px;
+    border-style: solid;
+    border-color: rgb(113, 119, 107, 0.4);
     box-shadow: inset 5px 5px 10px #222, inset -5px -5px 10px #444;
+    box-shadow: 
+         1px 1px 2px 5px rgb(0, 0, 0, 0.7), 
+        -1px -1px 2px 5px rgb(0, 0, 0, 0.7),
+         1px 1px 1px 5px rgb(141, 141, 141, 0.5), 
+        -1px -1px 1px 5px rgb(141, 141, 141, 0.5);
 }
