--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
-    position: relative;
-    height: 95vh;
+    min-height: 95vh;
     display: flex;
-    justify-content: center;   
+    justify-content: center;
     align-items: center;
+    min-width: fit-content;
     background: linear-gradient(270deg, #00f2ff, #4facfe, #00f2fe, #4facfe);
     background-size: 600% 600%;
     animation: gradient-background 20s ease infinite;
@@ -15,19 +15,35 @@ body {
     100% { background-position: 0% 50%; }
 }
 
-#calc{
-    position: relative;
+.empty-space {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 600px;
+    width: 327px;
+}
+
+.wrapper {
+    height: 510px;
+    width:  285px;
+    background: white;
+    border-radius: 45px;
+    transform: scaleY(1.18) scaleX(1.15);
+    box-shadow: inset 0px 0px 1px #222, inset -0px -0px 2px #444, 0 0 15px black;
+}
+
+#calc {
+    position: absolute;
     height: 552px;
     width: 315px;
     border-style: solid;
     border-color: rgb(0, 0, 0, 0);
-    border-radius: 20px;
+    border-radius: 30px;
     background-image: url(background.png);
     background-size: contain;
     background-position: center;
     overflow: hidden;
-    box-shadow: 0 0 15px black;
+    box-shadow: inset 0 0 2px rgb(0, 0, 0), inset 0 0 5px rgb(116, 116, 116), 0 0 2px black;
 }
 
 #calc::before {
@@ -146,3 +162,4 @@ body {
          1px 1px 1px 5px rgb(141, 141, 141, 0.5), 
         -1px -1px 1px 5px rgb(141, 141, 141, 0.5);
 }
+
