--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: Eurostile Extended;
+    src: url(Microgramma\ D\ Extended\ Bold.otf);
+}
+
 body {
     min-height: 95vh;
     display: flex;
@@ -76,7 +81,6 @@ body {
     border-radius: 10px;
     border-style: solid;
     border-color: rgb(0, 0, 0, 0.2);
-    box-shadow: inset 5px 5px 10px #222, inset -5px -5px 10px #444;
     box-shadow: 1px 1px 4px #000000, -1px -1px 4px #000000;
     overflow: hidden;
 }
@@ -118,12 +122,11 @@ body {
 }
 
 .model-text p:nth-child(1) {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: bold;
+    font-family: Eurostile Extended;
     letter-spacing: 1px;
-    transform: scaleX(1.3);
-    translate: -3px -15px;
-    margin-left: 8px;
+    transform: scaleX(0.9);
+    translate: -3px -12px;
+    margin-left: 6px;
     color: white;
 }
 
@@ -155,7 +158,6 @@ body {
     border-width: 7px;
     border-style: solid;
     border-color: rgb(113, 119, 107, 0.4);
-    box-shadow: inset 5px 5px 10px #222, inset -5px -5px 10px #444;
     box-shadow: 
          1px 1px 2px 5px rgb(0, 0, 0, 0.7), 
         -1px -1px 2px 5px rgb(0, 0, 0, 0.7),
