--- a/style.css
+++ b/style.css
@@ -3,6 +3,16 @@
     src: url(Microgramma\ D\ Extended\ Bold.otf);
 }
 
+@font-face {
+    font-family: Typo Round;
+    src: url(Typo_Round_Regular_Demo.otf);
+}
+
+@font-face {
+    font-family: TT;
+    src: url(TT\ Supermolot\ Neue\ Trial\ Light.ttf);
+}
+
 body {
     min-height: 95vh;
     display: flex;
@@ -178,6 +188,46 @@ body {
     height: 330px;
 }
 
+.top-text {
+    position: absolute;
+    top: 5px;
+    left: 24px;
+    display: grid;
+    grid-template-areas: "S A space M SE O";
+    grid-template-columns: 20px auto 114px 9px 14px auto;
+    gap: 15px;
+}
+
+.T-Btn-Text {
+    font-family: Typo Round;
+    font-size: 8px;
+}
+
+.S {
+    grid-area: S;
+    color: #909b15;
+}
+
+.A {
+    grid-area: A;
+    color: rgb(141, 6, 47);
+}
+
+.M {
+    grid-area: M;
+    color: white;
+}
+
+.SE {
+    grid-area: SE;
+    color: #909b15
+}
+
+.O {
+    grid-area: O;
+    color: white;
+}
+
 .top-buttons {
     position: absolute;
     top: 27px;
@@ -191,7 +241,7 @@ body {
 .shift { 
     grid-area: shi;
     background-image: url(metal\ buttons.png);
-    background-size: 28px;
+    background-size: 29px;
     background-position: center;
     background-repeat: no-repeat;
 }
@@ -199,7 +249,7 @@ body {
 .alpha {
     grid-area: alp;
     background-image: url(metal\ buttons.png);
-    background-size: 28px;
+    background-size: 29px;
     background-position: center;
     background-repeat: no-repeat;
 }
@@ -207,7 +257,7 @@ body {
 .menu {
     grid-area: men;
     background-image: url(metal\ buttons.png);
-    background-size: 28px;
+    background-size: 29px;
     background-position: center;
     background-repeat: no-repeat;
 }
@@ -215,7 +265,7 @@ body {
 .on {
     grid-area: on;
     background-image: url(metal\ buttons.png);
-    background-size: 28px;
+    background-size: 29px;
     background-position: center;
     background-repeat: no-repeat;
 }
@@ -236,7 +286,6 @@ body {
 }
 
 .steel:active {
-    background-size: 32px;
     box-shadow: 
     inset 2px 2px 6px rgba(0, 0, 0, 0.7),
     0px 0px 2px 3px rgb(0, 0, 0, 0.7), 
@@ -245,3 +294,135 @@ body {
     0px 0px 1px 3px rgb(141, 141, 141, 0.5);
 }
 
+.bot-buttons {
+    position: absolute;
+    bottom: 10px;
+    left: 17px;
+    display: grid;
+    grid-template-columns: 57px 57px 57px 57px auto;
+    grid-template-rows: auto auto auto auto;
+    row-gap: 4px;
+}
+
+.Btn {
+    width: 54px;
+    font-size: 18px;
+    font-weight: 900;
+    aspect-ratio: 2 / 1.3;
+    border-radius: 4.5px;
+    font-family: TT;
+    cursor: pointer;
+}
+
+span {
+    display: inline-block;
+    transform: translateY(2px);
+}
+
+.deci span{
+    font-weight: bolder;
+    transform: translateY(-3px) translateX(0.5px);
+}
+
+.div span {
+    height: 2.4px;
+    width: 13px;
+    background: black;
+    transform: translate(1px, -4px);
+}
+
+.div span::after {
+    content: "";
+    height: 3.2px;
+    width: 3.2px;
+    border-radius: 50%;
+    background: black;
+    position: absolute;
+    top: -5px;
+    left: 3px;
+    transform: translate(2px, -0.5px);
+}
+
+.div span::before {
+    content: "";
+    height: 3.2px;
+    width: 3.2px;
+    border-radius: 50%;
+    background: black;
+    position: absolute;
+    top: -5px;
+    left: 3px;
+    transform: translate(2px, 9.3px);
+}
+
+.minus span {
+    height: 2.4px;
+    width: 15px;
+    background: black;
+    transform: translate(1px, -4px);
+}
+
+.equals span {
+    height: 2.4px;
+    width: 15px;
+    background: black;
+    transform: translate(1px, -6px);
+}
+
+.equals span::after {
+    position: absolute;
+    content: "";
+    height: 2.4px;
+    width: 15px;
+    background: black;
+    left: 5px;
+    transform: translate(-5px, 5px);
+}
+
+.plus span {
+    content: "";
+    width: 2px;
+    height: 13px;
+    background: black;
+    transform: translate(0.8px, 0.5px);
+}
+
+.plus span::after {
+    position: absolute;
+    content: "";
+    width: 13px;
+    height: 2px;
+    background: black;
+    top: 5.5px;
+    left: -5px;
+    transform: translateX(-0.5px);
+}
+
+.deci span {
+    content: "";
+    height: 4px;
+    width: 4px;
+    border-radius: 50%;
+    background: black;
+}
+
+.seven {
+    border-top-left-radius: 15px;
+}
+
+.zero {
+    border-bottom-left-radius: 15px;
+}
+
+.AC {
+    border-top-right-radius: 15px;
+}
+
+.equals {
+    border-bottom-right-radius: 15px;
+}
+
+
+
+
+/* font-family: serif; for screen text*/
