--- a/style.css
+++ b/style.css
@@ -10,7 +10,12 @@
 
 @font-face {
     font-family: TT;
-    src: url(TT\ Supermolot\ Neue\ Trial\ Light.ttf);
+    src: url(TT\ Supermolot\ Neue\ Trial\ DemiBold.ttf);
+}
+
+@font-face {
+    font-family: Rotifera;
+    src: url(RotiferaDEMO-BlackItalic.ttf);
 }
 
 body {
@@ -136,6 +141,8 @@ body {
     justify-self: start;
     align-self: center;
     margin-left: 13px;
+    pointer-events: none;
+    user-select: none;
 }
 
 .model-text p:nth-child(1) {
@@ -188,6 +195,16 @@ body {
     height: 330px;
 }
 
+.maroon {
+    color: rgb(141, 6, 47);
+}
+.white {
+    color: white;
+}
+.lime {
+    color: #909b15;
+}
+
 .top-text {
     position: absolute;
     top: 5px;
@@ -201,31 +218,28 @@ body {
 .T-Btn-Text {
     font-family: Typo Round;
     font-size: 8px;
+    pointer-events: none;
+    user-select: none;
 }
 
 .S {
     grid-area: S;
-    color: #909b15;
 }
 
 .A {
     grid-area: A;
-    color: rgb(141, 6, 47);
 }
 
 .M {
     grid-area: M;
-    color: white;
 }
 
 .SE {
     grid-area: SE;
-    color: #909b15
 }
 
 .O {
     grid-area: O;
-    color: white;
 }
 
 .top-buttons {
@@ -296,12 +310,12 @@ body {
 
 .bot-buttons {
     position: absolute;
-    bottom: 10px;
+    bottom: 5px;
     left: 17px;
     display: grid;
     grid-template-columns: 57px 57px 57px 57px auto;
     grid-template-rows: auto auto auto auto;
-    row-gap: 4px;
+    row-gap: 10px;
 }
 
 .Btn {
@@ -312,11 +326,12 @@ body {
     border-radius: 4.5px;
     font-family: TT;
     cursor: pointer;
+    user-select: none;
 }
 
 span {
     display: inline-block;
-    transform: translateY(2px);
+    transform: translateY(0px);
 }
 
 .deci span{
@@ -406,6 +421,40 @@ span {
     background: black;
 }
 
+.nota span {
+    transform: translate(-1px , 0px);
+}
+
+.nota span::before {
+    content: "x";
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: lighter;
+}
+
+.nota span::after {
+    position: absolute;
+    content:"x";
+    font-family: Rotifera;
+    font-size: 10px;
+    top: -4px;
+    font-weight: bolder;
+}
+
+.delete, .AC {
+    background: rgb(11, 11, 129);
+    color: white;
+}
+
+.delete span {
+    transform: translateX(0.8px);
+}
+
+.multi span {
+    scale: 1.3;
+    transform: translate(1px, -1px);
+}
+
+
 .seven {
     border-top-left-radius: 15px;
 }
@@ -421,6 +470,135 @@ span {
 .equals {
     border-bottom-right-radius: 15px;
 }
+
+.func-text {
+    position: absolute;
+    display: grid;
+    grid-template-areas: 
+    "const conv reset ins undo off space",
+    "space space space space space npr ncr",
+    "space space space space space pol rec",
+    "rnd ran ranint pie e per sq";
+    grid-template-columns: 35px 35px 35px 35px 35px 35px 35px;
+    grid-template-rows: 20px 20px 20px 20px;
+    top: 136px;
+    left: 35px;
+    row-gap: 25px;
+    margin-top: 1.3px;
+}
+
+.func-text p:nth-child(1) {
+    grid-area: const;
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+}
+.func-text p:nth-child(2) {
+    grid-area: conv;
+    grid-column: 2 / 4;
+    grid-row: 1 / 2;
+    margin-left: 22px;
+}
+.func-text p:nth-child(3) {
+    grid-area: reset;
+    grid-column: 4 / 5;
+    grid-row: 1 / 2;
+    margin-left: 10px;
+}
+.func-text p:nth-child(4) {
+    grid-area: ins;
+    grid-column: 5 / 6;
+    grid-row: 1 / 2;
+    margin-left: 20px;
+}
+.func-text p:nth-child(5) {
+    grid-area: undo;
+    grid-column: 6 / 7;
+    grid-row: 1 / 2;
+    margin-left: 6px;
+}
+.func-text p:nth-child(6) {
+    grid-area: off;
+    grid-column: 8 / 9;
+    grid-row: 1 / 2;
+    margin-left: -15px;
+}
+.func-text p:nth-child(7) {
+    grid-area: npr;
+    grid-column: 6 / 7;
+    grid-row: 2 / 3;
+    margin-left: 1px;
+}
+.func-text p:nth-child(8) {
+    grid-area: ncr;
+    grid-column: 7 / 8;
+    grid-row: 2 / 3;
+    margin-left: 23px;
+}
+.func-text p:nth-child(9) {
+    grid-area: pol;
+    grid-column: 6 / 7;
+    grid-row: 3 / 4;
+    margin-left: 1px;
+}
+.func-text p:nth-child(10) {
+    grid-area: rec;
+    grid-column: 7 / 8;
+    grid-row: 3 / 4;
+    margin-left: 22px;
+}
+.func-text p:nth-child(11) {
+    grid-area: rnd;
+    grid-column: 1 / 2;
+    grid-row: 4 / 5;
+    margin-left: 3px;
+}
+.func-text p:nth-child(12) {
+    grid-area: ran;
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+    margin-left: 6px;
+}
+.func-text p:nth-child(13) {
+    grid-area: ranint;
+    grid-column: 3 / 4;
+    grid-row: 4 / 5;
+    margin-left: -2px;
+}
+.func-text p:nth-child(14) {
+    grid-area: pie;
+    grid-column: 4 / 5;
+    grid-row: 4 / 5;
+    margin-left: 4px;
+    margin-bottom: -3px;
+    scale: 1.3;
+}
+.func-text p:nth-child(15) {
+    grid-area: e;
+    grid-column: 5 / 6;
+    grid-row: 4 / 5;
+    margin-left: 1px;
+    margin-bottom: -3px;
+    scale: 1.2;
+}
+.func-text p:nth-child(16) {
+    grid-area: per;
+    grid-column: 6 / 7;
+    grid-row: 4 / 5;
+    margin-left: 3px;
+}
+.func-text p:nth-child(17) {
+    grid-area: sq;
+    grid-column: 7 / 8;
+    grid-row: 4 / 5;
+    margin-left: 27px;
+    margin-bottom: 4px;
+    scale: 1.5;
+}
+
+
+
+
+
 
 
 
